# logic-compute-env

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
programming-with-shared-variables/distributed-computing/: CMakeLists.txt  README.md  divisible-app.cpp  multiply-app.cpp
programming-with-shared-variables/distributed-computing/attachments/: mpi_main.cpp
programming-with-shared-variables/iterative-parallelism/: CMakeLists.txt  README.md  k-thread-app.cpp  multi-thread-app.cpp  single-thread-app.cpp
programming-with-shared-variables/producers-and-consumers/: CMakeLists.txt  README.md  n-queens-consumer.cpp  n-queens-popen.cpp  n-queens-producer.cpp  n-queens-shared.cpp  n-queens.cpp  shared-variables  shared-variables.cpp
programming-with-shared-variables/producers-and-consumers/attachments/: N_QUEENS.md  shared_int.cpp  stones.cpp  thread_pool.cpp
programming-with-shared-variables/producers-and-consumers/include/: stb_image_write.h
programming-with-shared-variables/recursive-parallelism/: CMakeLists.txt  README.md  multi-thread-app-ii.cpp  multi-thread-app.cpp  recursive-app.cpp  restriction-thread-app.cpp
programming-with-shared-variables/recursive-parallelism/attachments/: 123  example.md
programming-with-shared-variables/test-work/: CMakeLists.txt  min-array-elem.cpp  task.md
